vpc.tf
# VPC creation
resource "aws_vpc" "main" {
  # cidr_block           = "10.0.0.0/16" #private
  cidr_block           = "178.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "Project VPC 1"
  }
}

# the IGW is needed for the vpc to access the internet
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

# Creation of 3 private subnets
# resource "aws_subnet" "private_subnets" {
#  count             = length(var.private_subnet_cidrs)
#  vpc_id            = aws_vpc.main.id
#  cidr_block        = element(var.private_subnet_cidrs, count.index)
#  availability_zone = element(var.azs, count.index)

#  tags = {
#    Name = "Private Subnet ${count.index + 1}"
#  }
# }

# Creation of 3 public subnets
resource "aws_subnet" "public_subnets" {
  count             = length(var.public_subnet_cidrs)
  vpc_id            = aws_vpc.main.id
  cidr_block        = element(var.public_subnet_cidrs, count.index)
  availability_zone = element(var.azs, count.index)

  tags = {
    Name = "Public Subnet ${count.index + 1}"
  }
}

# ADDED
resource "aws_route_table" "public-route-table" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "public-route-table"
   }
 }

# Associate private subnets to route table
resource "aws_route_table_association" "public_subnet_asso" {
  count          = length(var.public_subnet_cidrs)
  subnet_id      = element(aws_subnet.public_subnets[*].id, count.index)
  route_table_id = aws_route_table.public-route-table.id
}

# Security group allowing traffice from anywhere to port 80
#resource "aws_security_group" "load-balancer" {
#  name        = "load_balancer_security_group"
#  description = "Controls access to the ELB: allow ssh http inbound traffic"
#  vpc_id      = aws_vpc.main.id

#  ingress {
#    description = "SSH from VPC"
#    from_port   = 22
#    to_port     = 22
#    protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }

#  ingress {
#    description = "HTTP from VPC"
#    from_port   = 80
#    to_port     = 80
#    protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }

  egress {
    from_port   = 0
    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }
# resource "aws_security_group" "load-balancer" {
#  name        = "load_balancer_security_group"
#  description = "Controls access to the ELB: allow ssh http inbound traffic"
#  vpc_id      = aws_vpc.main.id

#  ingress {
#    description = "SSH from VPC"
#    from_port   = 22
#    to_port     = 22
#    protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }

#  ingress {
#    description = "HTTP from VPC"
#    from_port   = 80
#    to_port     = 80
#    protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }

#  egress {
#    from_port   = 0
#    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }
#}
  # ingress {
  #  from_port   = 80
  #  to_port     = 80
  #   protocol    = "tcp"
  #  cidr_blocks = ["0.0.0.0/0"]
  # }

  # egress {
  #  from_port   = 0
  #  to_port     = 0
  #  protocol    = "-1"
  #  cidr_blocks = ["0.0.0.0/0"]
  # }


# An internet facing ELB with connections to the 3 public subnet IP addresses of your web servers
# resource "aws_elb" "elb" {
#  name            = "section1-elb"
#  security_groups = [aws_security_group.load-balancer.id]

#  # connection to subnets
#  # subnets = [aws_subnet.private_subnets[0].id, aws_subnet.private_subnets[1].id, aws_subnet.private_subnets[2].id]
#    subnets = [aws_subnet.public_subnets[0].id, aws_subnet.public_subnets[1].id, aws_subnet.public_subnets[2].id]

#  listener {
#    instance_port     = 8000
#    instance_protocol = "http"
#    lb_port           = 80
#    lb_protocol       = "http"
#  }

#   health_check {
#    healthy_threshold   = 3
#    unhealthy_threshold = 2
#    timeout             = 3
#    target              = "HTTP:8000/"
#    interval            = 30
#  }

#  tags = {
#    Name = "section1-elb"
#  }
#}

# Target group -- 
#resource "aws_alb_target_group" "default-target-group" {
#   name     = "${var.ec2_instance_name}-tg"
#  port     = 80
#  protocol = "HTTP"
#  vpc_id   = aws_vpc.main.id

#  health_check {
#    path                = var.health_check_path
#    port                = "traffic-port"
#    healthy_threshold   = 5
#    unhealthy_threshold = 3
#    timeout             = 3
#    interval            = 60
#    matcher             = "200"
#  }
#}

########################
# A NAT gateway allows instances in our private subnets to connect to
# services outside of our vpc but prohibits external services from connecting
# with those instances
########################

# provides an Elastic IP resource
# resource "aws_eip" "nat_gateway" {
#  domain                    = "vpc"
#  associate_with_private_ip = "10.0.0.5"
#  depends_on                = [aws_internet_gateway.gw]
# }

# resource "aws_nat_gateway" "ngw" {
#  allocation_id = aws_eip.nat_gateway.id
#  subnet_id     = aws_subnet.private_subnets[0].id

#  tags = {
#    Name = "terraform-ngw"
#  }
#  depends_on = [aws_eip.nat_gateway]
# }

# VPC routing table; controls where traffic in VPC is directed
# resource "aws_route_table" "private-route-table" {
#  vpc_id = aws_vpc.main.id
#  tags = {
#    Name = "private-route-table"
#  }
# }

# Route NAT Gateway
# resource "aws_route" "nat-ngw-route" {
#  route_table_id         = aws_route_table.private-route-table.id
#  nat_gateway_id         = aws_nat_gateway.ngw.id
#  destination_cidr_block = "0.0.0.0/0"
# }

# Associate private subnets to route table
# resource "aws_route_table_association" "private_subnet_asso" {
#  count          = length(var.private_subnet_cidrs)
#  subnet_id      = element(aws_subnet.private_subnets[*].id, count.index)
#  route_table_id = aws_route_table.private-route-table.id
# }
